# Hole-in-one

./: CMakeLists.txt  Hole.cpp  Hole.h  Physics.cpp  Physics.h  PhysicsBall.cpp  PhysicsBall.h  README.md  Vec3.cpp  Vec3.h  Vision.cpp  main.cpp
res/: arrow.frag  arrow.vert  background.frag  background.vert  ball.frag  ballShadow.frag  default.vert  ground.frag  hole.frag  holeSide.frag  particle.frag  particle.vert  ring.frag  shooter.frag  shooter.vert  text.frag  text.vert
src/: PoseEstimation.cpp  Render.cpp  Render.h  Util.h  Vision.cpp  Window.cpp  main.cpp  sample.cpp
src/Physics/: Physics.cpp  Physics.h  PhysicsBall.cpp  PhysicsBall.h  Vec3.cpp
src/Render/: Render.cpp  Render.h  Util.h  Window.cpp  Window.h
src/Vision/: MarkerTracker.cpp  PoseEstimation.h  Tracking.cpp  Tracking.h  Vision.cpp  Vision.h  sample.cpp
